# rule-engine

./: LICENSE  rule-engine.cabal  stack.yaml
src/: Engine.hs  Example.hs  Server.hs
src/Engine/: Execute.hs  Rule.hs  Tree.hs
src/Server/: Combinators.hs  Statistics.hs
